code get list quesstion exercise
